# ml-course

./: .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  PORTFOLIO.md  PR_PLAN.md  README.md  SYLLABUS.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
capstone/: README.md  proposal.md
docker/: Dockerfile.dev
docker/jupyter/: Dockerfile  start.sh
modules/01_math_foundations/: README.md  readings.md
modules/01_math_foundations/notebooks/: lecture_notes.md
modules/01_math_foundations/problems/: README.md  solutions.py  solutions_theory.md
modules/02_stat_learning/: README.md  readings.md
modules/02_stat_learning/notebooks/: lecture_notes.md
modules/02_stat_learning/problems/: README.md  solutions_theory.md
modules/03_classical_supervised/: README.md  readings.md
modules/03_classical_supervised/notebooks/: lecture_notes.md
modules/03_classical_supervised/problems/: README.md  solutions.py  solutions_theory.md
modules/04_classical_unsupervised/: README.md  readings.md
modules/04_classical_unsupervised/notebooks/: lecture_notes.md
modules/04_classical_unsupervised/problems/: README.md  solutions.py  solutions_theory.md
modules/05_nn_from_scratch/: README.md  readings.md
modules/05_nn_from_scratch/notebooks/: lecture_notes.md
modules/05_nn_from_scratch/problems/: README.md  solutions_theory.md
modules/06_pytorch_trainer/: README.md  readings.md
modules/06_pytorch_trainer/notebooks/: lecture_notes.md
modules/06_pytorch_trainer/problems/: README.md  solutions_theory.md
modules/07_cnns_vision/: README.md  readings.md
modules/07_cnns_vision/notebooks/: lecture_notes.md
modules/07_cnns_vision/problems/: README.md  solutions.py  solutions_theory.md
modules/08_transformers/: README.md  readings.md
modules/08_transformers/notebooks/: lecture_notes.md
modules/08_transformers/problems/: README.md  solutions.py  solutions_theory.md
modules/09_llms_dpo/: README.md  readings.md
modules/09_llms_dpo/notebooks/: lecture_notes.md
modules/09_llms_dpo/problems/: README.md  solutions.py  solutions_theory.md
modules/10_diffusion_multimodal/: README.md  readings.md
modules/10_diffusion_multimodal/notebooks/: lecture_notes.md
modules/10_diffusion_multimodal/problems/: README.md  solutions.py  solutions_theory.md
modules/11_rl_agents/: README.md  readings.md
modules/11_rl_agents/notebooks/: lecture_notes.md
modules/11_rl_agents/problems/: README.md  solutions.py  solutions_theory.md
modules/12_applied_capstone/: README.md  readings.md
modules/12_applied_capstone/notebooks/: lecture_notes.md
modules/12_applied_capstone/problems/: README.md  solutions.py  solutions_theory.md
modules/13_llms_dev_surface/: README.md  readings.md
modules/13_llms_dev_surface/notebooks/: lecture_notes.md
modules/13_llms_dev_surface/problems/: README.md  solutions_theory.md
notebooks/: 00_sanity_check.ipynb
portfolio/: README.md
portfolio/02_numpy_linreg/: README.md  demo.py  linreg.py  report.md
portfolio/03_tabular_benchmark/: README.md  benchmark.py
portfolio/04_pca_statarb/: README.md  demo.py  pca_statarb.py  results.md
portfolio/05_micrograd/: README.md  demo.py  report.md
portfolio/06_trainer/: README.md  demo.py
portfolio/07_vision_classifier/: README.md  classifier.py  demo.py
portfolio/08_tinygpt/: README.md  model.py  train.py
portfolio/09_dpo_tinyllama/: README.md  dpo_train.py  eval_harness.py  model_card_template.md
portfolio/10_ddpm/: README.md  ablate.py  ddpm.py  train.py
portfolio/11_rl_agent/: README.md  agent.py  market_env.py  ppo.py  train_ppo.py
portfolio/12_capstone/: README.md  demo_pinn.py  demo_statarb.py  pinn_burgers.py  statarb_walkforward.py
portfolio/12_capstone/paper_reproduction/: PLAN.md  README.md
portfolio/13_dev_surface/: README.md  cost_model.py  demo.py  llm_judge.py
portfolio/13_dev_surface/mcp_demo/: README.md  server.py
scripts/: bootstrap.ps1  bootstrap.sh  bootstrap_macos.sh  run_jupyter.sh
src/mlcourse/: __init__.py  config.py  trainer.py
src/mlcourse/autograd/: __init__.py  engine.py  nn.py  optim.py
tests/: conftest.py  test_smoke.py
tests/week_01/: test_problem_set.py
tests/week_02/: test_linreg.py
tests/week_03/: test_problem_set.py
tests/week_04/: test_problem_set.py
tests/week_05/: test_engine.py  test_engine_slow.py
tests/week_06/: test_trainer.py
tests/week_07/: test_conv_and_classifier.py  test_slow_trainer_integration.py
tests/week_08/: test_transformers.py
tests/week_09/: test_dpo_and_eval.py
tests/week_10/: test_diffusion.py  test_slow_trainer_integration.py
tests/week_11/: test_rl_and_agent.py
tests/week_12/: test_capstone.py
tests/week_13/: test_llm_judge_and_mcp.py
(+13 files in other folders)
