[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mlcourse"
version = "0.1.0"
description = "Course workspace (Week 0 scaffolding)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "rich>=13.7",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# Jupyter + dev tooling
dev = [
  "jupyterlab>=4.2",
  "ipykernel>=6.29",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-PyYAML>=6.0.12",
]

# Install later when you start deep learning (kept optional to avoid platform hassles in Week 0)
dl = [
  "torch>=2.3",
  "torchvision>=0.18",
  "torchaudio>=2.3",
  "lightning>=2.4",
  "tensorboard>=2.17",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mlcourse"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]  # handled by formatter expectations

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
strict_equality = true
exclude = ["notebooks/"]
