[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "mlcourse"
version = "0.1.0"
description = "A 12-week ML/AI course for quantitatively-minded learners (physics/quant background)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "tqdm>=4.66",
  "rich>=13.7",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# Jupyter + dev tooling
dev = [
  "jupyterlab>=4.2",
  "ipykernel>=6.29",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-PyYAML>=6.0.12",
]

# Core deep-learning stack (W5 autograd onwards, W6 PyTorch, W7 CNNs)
dl = [
  "torch>=2.3",
  "torchvision>=0.18",
  "torchaudio>=2.3",
  "lightning>=2.4",
  "torchinfo>=1.8",
  "tensorboard>=2.17",
]

# HuggingFace ecosystem + Apple-native MLX (W8 tiny GPT, W9 SFT/DPO)
llm = [
  "transformers>=4.44",
  "datasets>=2.20",
  "tokenizers>=0.19",
  "peft>=0.12",
  "trl>=0.10",
  "accelerate>=0.34",
  "sentencepiece>=0.2",
  "tiktoken>=0.7",
  # Apple Silicon native frameworks; install on macOS only
  "mlx>=0.16; platform_system == 'Darwin'",
  "mlx-lm>=0.18; platform_system == 'Darwin'",
]

# Diffusion + multimodal (W10)
diffusion = [
  "diffusers>=0.30",
  "open_clip_torch>=2.26",
  "safetensors>=0.4",
  "einops>=0.8",
  "pillow>=10.4",
]

# Reinforcement learning + agents (W11)
rl = [
  "gymnasium>=0.29",
  "stable-baselines3>=2.3",
]

# Scientific ML + quant-finance applied tracks (W12)
sciml = [
  "torchdiffeq>=0.2.4",
  "deepxde>=1.12",
  "pysr>=0.19",
  "yfinance>=0.2.43",
  "statsmodels>=0.14",
  "arch>=7.0",
]

# Experiment ops (reproducibility, tracking, config) — introduced W6
ops = [
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "wandb>=0.17",
  "xgboost>=2.1",
  "lightgbm>=4.5",
  "gradio>=4.40",
]

# Convenience: everything (only attempt after you know the above groups install cleanly)
all = [
  "mlcourse[dev,dl,llm,diffusion,rl,sciml,ops]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mlcourse"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# RUF001/002/003: allow scientific notation Unicode (σ, μ, β, ×, ², α) in
# docstrings/comments/strings — this is an ML/physics course; Greek letters
# and maths symbols show up on purpose.
# E501: long lines are handled by the formatter; don't lint.
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
markers = [
  "slow: long-running integration tests that train a real model (use --run-slow to include)",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
strict_equality = true
exclude = ["notebooks/", "modules/"]

# Optional deep-learning deps are not required by the base install; mypy
# should not fail when they are absent from the environment. Add further
# entries as downstream weeks introduce more optional imports.
[[tool.mypy.overrides]]
module = ["torch.*", "wandb.*"]
ignore_missing_imports = true
